Sat Jul  3 08:56:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/error.c src/odbc/odbc.c src/odbc/sqlwparams.h:
	- other wide encoding merges

Sat Jul  3 01:55:38 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsiconv.h src/replacements/iconv.c:
	- cleanup iconv replacement

Fri Jul  2 20:57:16 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c src/tds/util.c: cleanup

Fri Jul  2 16:07:45 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/Makefile.am src/odbc/error.c src/odbc/odbc.c:
	- src/odbc/sqlwparams.h
	- use macros to prepare code for wide encoding

Fri Jul  2 15:38:06 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c:
	- put odbc_set_string_i and odbc_set_string together, prepare for
	  wide encoding

Fri Jul  2 11:30:40 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/descriptor.c src/odbc/error.c:
	- add desc_get_dbc and reuse it

Fri Jul  2 11:01:08 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/stats.c:
	- correct wrong assumption about statistics functions

Tue Jun 29 14:07:32 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: do not use strtok which is not reentrant

Tue Jun 29 14:00:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: use ISO-8859-1 if ASCII is detected

Mon Jun 28 22:24:37 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	- add odbc_dstr_copy and reuse it

Mon Jun 28 21:51:02 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix small and quite impossible leak

Sun Jun 27 18:51:00 CDT 2010	Craig A. Berry <craigberry@mac.com>
	* src/apps/bsqldb.c src/apps/bsqlodbc.c src/apps/defncopy.c
	* src/apps/fisql/fisql.c src/apps/freebcp.c src/apps/tsql.c